minor translations fix + about.xml

--- a/Languages/English/Keyed/DualWield_keys.xml
+++ b/Languages/English/Keyed/DualWield_keys.xml
@@ -49,7 +49,7 @@
 	<DW_HerHis_Male>his</DW_HerHis_Male>
 	<DW_HerHis_Female>her</DW_HerHis_Female>
 	<DW_EquipOffHand>Equip {0} (off-hand)</DW_EquipOffHand>
-	<DW_DropOfffHand>Drop {0} (off-hand)</DW_DropOfffHand>
+	<DW_DropOffHand>Drop {0} (off-hand)</DW_DropOffHand>
 	<DW_AsOffHand>as off-hand weapon</DW_AsOffHand>
 	<DW_MissArmOrHand>Missing arm or hand</DW_MissArmOrHand>
 	<DW_WieldingTwoHanded>Wielding two-handed weapon</DW_WieldingTwoHanded>
