--- a/Languages/Japanese/Keyed/DualWield_keys.xml
+++ b/Languages/Japanese/Keyed/DualWield_keys.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
-  <DW_Setting_DualWield_OK>逆手で装備可</DW_Setting_DualWield_OK>
-  <DW_Setting_DualWield_NOK>逆手で装備不可</DW_Setting_DualWield_NOK>
-  <DW_Setting_TwoHanded_OK>二刀流可能</DW_Setting_TwoHanded_OK>
-  <DW_Setting_TwoHanded_NOK>二刀流不可</DW_Setting_TwoHanded_NOK>
-  <DW_SettingsGroup_DualWieldSelection_Title>二刀流武器を設定</DW_SettingsGroup_DualWieldSelection_Title>
-  <DW_SettingsGroup_DualWieldSelection_Description>他の武器と一緒に使用できる武器を設定します。二刀流可能な武器は両手持ちの武器と一緒に使用することはできませんが、通常の（非二刀流/両手持ち以外）武器や、他の二刀流可能な武器と一緒に使用することができます。</DW_SettingsGroup_DualWieldSelection_Description>
+  <DW_Setting_DualWield_OK>予備武器に装備可</DW_Setting_DualWield_OK>
+  <DW_Setting_DualWield_NOK>予備武器に装備不可</DW_Setting_DualWield_NOK>
+  <DW_Setting_TwoHanded_OK>両手持ち武器</DW_Setting_TwoHanded_OK>
+  <DW_Setting_TwoHanded_NOK>非両手持ち武器</DW_Setting_TwoHanded_NOK>
+  <DW_SettingsGroup_DualWieldSelection_Title>予備武器を設定</DW_SettingsGroup_DualWieldSelection_Title>
+  <DW_SettingsGroup_DualWieldSelection_Description>他の非両手持ち武器と一緒に使用できる予備武器を設定します。両手持ち武器に設定されていない予備武器なら、予備武器に設定されていない武器と一緒に使用することができます。</DW_SettingsGroup_DualWieldSelection_Description>
   <DW_SettingsGroup_TwoHandSelection_Title>両手持ち武器を設定</DW_SettingsGroup_TwoHandSelection_Title>
-  <DW_SettingsGroup_TwoHandSelection_Description>どの武器が両手を使う必要があるか設定します。二刀流可能な武器は、両手持ち武器と一緒に使用できません。</DW_SettingsGroup_TwoHandSelection_Description>
+  <DW_SettingsGroup_TwoHandSelection_Description>どの武器が両手を使う必要があるか設定します。両手持ち武器は二刀流できません。</DW_SettingsGroup_TwoHandSelection_Description>
   <DW_Expand>開く</DW_Expand>
   <DW_Collapse>閉じる</DW_Collapse>
 
@@ -63,6 +63,6 @@
   <DW_MissArmOrHand>腕や手が足りません</DW_MissArmOrHand>
   <DW_WieldingTwoHanded>両手持ち武器を二刀流する</DW_WieldingTwoHanded>
   <DW_NoTwoHandedInOffHand>両手持ち武器を逆手に持つことは不可能</DW_NoTwoHandedInOffHand>
-  <DW_CannotBeOffHand>Modオプションで二刀流可能武器として設定されていない</DW_CannotBeOffHand>
+  <DW_CannotBeOffHand>Modオプションで予備武器として設定されていない</DW_CannotBeOffHand>
 
 </LanguageData>
